# rust-journey

./: .gitignore  Cargo.toml  README.md
basic-web-server/: Cargo.toml  README.md
basic-web-server/src/: main.rs
coll/: Makefile  README.md
coll/src/: lib.rs  persistent_stack.rs  stack.rs  vector.rs
fsm/: Cargo.toml  README.md
fsm/src/: lib.rs  regex.rs  turnstile.rs
jinspect/: Cargo.toml  README.md
jinspect/samples/: App.java
jinspect/src/: cli.rs  cpool.rs  flag.rs  main.rs  pool.rs  reader.rs
mecsv/: Cargo.toml  README.md
memio/: Cargo.toml  README.md
memio/resources/: rbuf.data
sketch/src/: examples.rs  intro.rs  main.rs  mutability.rs  structs.rs
